# anarchist-readable-name-generator-lib

./: .gitignore  .versio.yaml  .woodpecker.yaml  CHANGELOG.md  Cargo.toml  Justfile  README.md  cog.toml  renovate.json
.forgejo/workflows/: ci.yml  publish.yml  test-and-tag.yml
.github/: dependabot.yml
.github/workflows/: test-and-tag.yml
.woodpecker/: ci.yaml  deploy.yaml  fix.yaml  lint.yaml  pr.yaml  release.yaml  test.yaml
ci/: concourse.yaml
src/: lib.rs  names.rs
