[package]
name = "anarchist-readable-name-generator-lib"
description = "Generate a readable name from something with with famous anarchist writers"
version = "0.1.4"
edition = "2021"
license = "CC0-1.0"
repository = "https://codeberg.org/PurpleBooth/anarchist-readable-name-generator-lib"
keywords = ["names", "utility"]
categories = ["development-tools::testing","command-line-interface"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rand = "0.9.0"
[dev-dependencies]
rand_chacha = "=0.9.0"
